--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "description": "Türkiye'nin en bağımlılık yapan balon patlatma oyunu",
   "main": "index.html",
   "scripts": {
-    "start": "http-server -p 8000",
-    "build": "echo 'Build complete'"
+    "start": "http-server -p 8000 .",
+    "build": "echo 'Build complete'",
+    "dev": "http-server -p 8000 ."
   },
   "keywords": [
     "game",
-    "mobile",
+    "mobile", 
     "bubble",
     "pop",
-    "turkish"
+    "turkish",
+    "oyun"
   ],
   "author": "Eyedeu",
   "license": "MIT",
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "http-server": "^14.1.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  }
 }
