--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,8 @@
   "theme_color": "#3B82F6",
   "orientation": "portrait-primary",
   "categories": ["games", "entertainment"],
+  "lang": "tr",
+  "dir": "ltr",
   "icons": [
     {
       "src": "icon-192.png",
@@ -17,7 +19,7 @@
     },
     {
       "src": "icon-512.png",
-      "sizes": "512x512",
+      "sizes": "512x512", 
       "type": "image/png",
       "purpose": "any maskable"
     }
