--- a/manifest.json
+++ b/manifest.json
@@ -9,19 +9,5 @@
   "orientation": "portrait-primary",
   "categories": ["games", "entertainment"],
   "lang": "tr",
-  "dir": "ltr",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512", 
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ]
+  "dir": "ltr"
 }
